# XL-Excel

./: README.md  pyproject.toml
src/xl_excel/: __init__.py  __main__.py  models_cli.py  util.py
tests/: test_pkg_standalone_execution.py  test_repo_structure.py  test_util.py
tests/_data/: sample_wkbk.xlsx
